style(details): fix genres gap

--- a/app/film-database/components/movie/_fdDetails.scss
+++ b/app/film-database/components/movie/_fdDetails.scss
@@ -72,7 +72,12 @@
     }
     &__col {
       display: flex;
-      gap: var(--fd-gap);
+      &:nth-of-type(1) {
+        gap: var(--fd-gap);
+      }
+      &:nth-of-type(2) {
+        gap: 6px;
+      }
       & ul:nth-of-type(1),
       & ul:nth-of-type(2) {
         padding-bottom: var(--fd-gap);
